<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/empty_title_text"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/empty_view_title_text"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView

        android:id="@+id/order_number_text"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:paddingTop="8dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#A2AAB0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp" >
        <TextView
            android:layout_marginStart="0dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:id="@+id/order_text"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/return_button_text"
            android:textAppearance="?android:textAppearanceMedium"/>

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:background="@color/backgroundColdGrey"
        android:src="@mipmap/ic_return" />
    </LinearLayout>

</LinearLayout>